# tauri

api/: package.json
cli/core/src/: cli.yml
cli/core/src/helpers/: app_paths.rs
cli/tauri-bundler/src/bundle/: common.rs  deb_bundle.rs  dmg_bundle.rs  wix.rs
cli/tauri-bundler/src/bundle/templates/: appimage
cli/tauri.js/: CHANGELOG.md  package.json
cli/tauri.js/src/api/: init.ts
cli/tauri.js/src/helpers/: app-paths.ts
cli/tauri.js/src/template/: defaultConfig.ts  index.ts
cli/tauri.js/test/jest/__tests__/: build.spec.js
cli/tauri.js/test/jest/fixtures/app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-macros/src/: expand.rs
tauri-utils/src/: platform.rs
tauri/examples/api/src-tauri/: tauri.conf.json
tauri/examples/api/src-tauri/src/: build.rs
tauri/examples/helloworld/src-tauri/: tauri.conf.json
tauri/examples/helloworld/src-tauri/src/: build.rs
tauri/examples/multiwindow/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src/app/: utils.rs
