workspace = { }

[package]
name = "app"
version = "0.1.0"
description = "A Tauri Multiwindow App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "Content/32x32.png",
  "Content/128x128.png",
  "Content/128x128@2x.png",
  "Content/Icon.icns",
  "Content/Icon.ico"
]

[dependencies]
tauri = { path = "../../..", features =["api-all"]}

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
