workspace = { }

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
author = [ "Daniel Thompson-Yvetot" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "Content/32x32.png",
  "Content/128x128.png",
  "Content/128x128@2x.png",
  "Content/Icon.icns",
  "Content/Icon.ico"
]

[dependencies]
serde_json = "1.0.62"
serde = "1.0"
serde_derive = "1.0"
tauri = { path = "../../../../../../../tauri", features =["api-all"]}

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "src/main.rs"
